fix warnings and improve dark mode

--- a/src/Components/Friends/FriendRequest/SenderCard/SenderCard.css
+++ b/src/Components/Friends/FriendRequest/SenderCard/SenderCard.css
@@ -9,7 +9,7 @@
     margin-left: 12.5%;
     min-height: 35vh;
     margin-top: 5%;
-    background-color: #0984e3;
+    background-color: white;
     color: black;
 }
 
